# tribe-ai

./: .gitignore  .mcp.json  CLAUDE.md  DEMO_SCRIPT.md  HACKATHON.md  README.md  package-lock.json  package.json  render.yaml
.bmad-core/: install-manifest.yaml
agents/tribe_agent/: .env.example  .gitignore  Dockerfile  README.md  agent.py  cloudbuild.yaml  logging_config.py  pyproject.toml  render.yaml  requirements.txt  server.py
agents/tribe_agent/tools/: __init__.py  context.py  housing.py  live_search.py  visa.py
apps/web/: .env.example  .env.prod  .eslintrc.json  README.md  middleware.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts
docs/: a2ui-widgets.md  api-tribe.md  architecture.md  arcjet-integration-plan.md  brainstorming-session-results.md  brief.md  briefing-improvement-plan.md  convex-clerk-integration.md  corridor-feed-redesign.md  financial-tracker-design.md  fireplexity-integration.md  immigrant_resources_api.json  linkedin-post.md  migrant_housing_resources.json  prd.md  rate-limiting-integration.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  1.5.story.md  10.1.story.md  10.10.story.md  10.11.story.md  10.12.story.md  10.2.story.md  10.3.story.md  10.4.story.md  10.5.story.md  10.6.story.md  10.7.story.md  10.8.story.md  10.9.story.md  2.1.story.md  2.2.story.md  2.3.story.md  2.4.story.md  2.5.story.md  3.1.story.md  3.2.story.md  3.3.story.md  3.4.story.md  3.5.story.md  3.6.story.md  4.1.story.md  4.2.story.md  4.3.story.md  4.4.story.md  4.5.story.md  5.1.story.md  (+17 more)
(+266 files in other folders)
