[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tribe-agent"
version = "0.1.0"
description = "TRIBE AI ADK Agent - Migration assistance powered by Google Gemini"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ag-ui-adk>=0.1.0",
    "google-adk>=0.1.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
